<resources>
    <string name="app_name">Babyphone</string>
    <string name="action_settings">Settings</string>
    <string name="button_play">Play</string>
    <string name="button_stop">Stop</string>
    <string name="nfChannelName">Babyphone</string>
    <string name="nfChannelDesc">Babyphone Events</string>
    <string name="nfTitle">Babyphone</string>
    <string name="nfTextConnected">Connected</string>
    <string name="nfTextConnecting">Connecting...</string>
    <string name="nfTextDisconnected">Disconnected</string>
    <string name="nfTextConnectionProblems">Connection Problems...</string>
    <string name="switchConnect_Disconnected">Disconnected</string>
    <string name="switchConnect_Connecting">Connecting</string>
    <string name="switchConnect_Connected">Connected</string>
    <string name="title_activity_video">Video</string>
    <string name="lights">Lights</string>
    <string name="title_activity_connect">Connect</string>
    <string name="conn_motion_enabled">Motion Detection</string>
    <string name="title_activity_devices">Devices</string>
    <string name="monitor_btn_live_live">live</string>
    <string name="monitor_btn_live_stop">stop</string>
    <string name="monitor_subtitle">%1$s: %2$s</string>
    <string name="btn_monitor">Monitor</string>
    <string name="disconnect">Disconnect</string>
    <string name="host_name">Host Name</string>
    <string name="text_connecting">Connecting...</string>
    <string name="text_connected">Connected</string>
    <string name="status">Status</string>
    <string name="discover">Discover</string>
    <string name="exit">Exit</string>
    <string name="monitor">Monitor</string>
    <string name="waiting_for_connection">Waiting\nfor\nConnection…</string>
    <string name="new_connection_hint_name">NAME</string>
    <string name="new_connection_hint_hostname">HOST NAME</string>
    <string name="new_connection_button_create">Create</string>
    <string name="edit_connection_header_new">New Device</string>
    <string name="edit_connection_header_edit">Edit Device</string>
    <string name="edit_connection_error_hostname">Please specify a hostname</string>
    <string name="edit_connection_error_name">Please specify a name</string>
    <string name="btn_label_save">save</string>
    <string name="txt_status">Status</string>
    <string name="label_name">Name</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_delete">Delete</string>
    <string name="live">live</string>
    <string name="start_audio">Play</string>
    <string name="stop_audio">Stop</string>
    <string name="alarm_on">ON</string>
    <string name="alarm_off">OFF</string>
    <string name="btn_refresh">refresh</string>
    <string name="share">Share</string>
    <string name="noise_level">Noise Level</string>
    <string name="label_alarm_enabled">Enabled</string>
    <string name="label_alarm_disabled">Disabled</string>
    <string name="label_alarm_snoozing">Snoozing for %s</string>
    <string name="alarm_label_enabled">Alarm %s</string>
    <string name="autosound_label_enabled">Auto-Sound %s</string>

</resources>
