<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BabyphoneMain.NewConnection.Frame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="32dp"
    android:layout_marginTop="128dp"
    android:layout_marginRight="32dp"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".EditConnection">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_connection_header_new"
        android:layout_margin="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/new_connection_hint_name"
        app:helperText="e.g. home/"
        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/new_connection_hint_hostname"
        app:helperText="e.g. babyphone.fritz.box"
        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_hostname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_connection_button_create" />

</androidx.appcompat.widget.LinearLayoutCompat>
